--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -3,6 +3,12 @@ name = "pipeline"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+  "logging>=0.4.9.6",
+  "matplotlib>=3.10.8",
+  "numpy>=2.3.5",
+  "opencv-python>=4.11.0.86",
+  "scikit-image>=0.25.2",
+  "scipy>=1.16.3",
   "torch>=2.9.1",
   "torchvision>=0.24.1",
 ]
@@ -19,3 +25,9 @@ torchvision = [
 name = "pytorch-cu130"
 url = "https://download.pytorch.org/whl/cu130"
 explicit = true
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
+    "ty>=0.0.5",
+]
